# BwatEngine

./: .buildinfo  .gitignore  .gitmodules  CMakeLists.txt  ECSQuickstart.html  LUAQuickstart.html  README.md  genindex.html  index.html  launcher.cpp  objects.inv  search.html  searchindex.js
.github/workflows/: codeql-analysis.yml  main.yml
ECS/: Coordinator.html
Editor/: CMakeLists.txt  imgui.ini
Editor/include/: EditorInterface.hpp  FileDialog.hpp  Widget.hpp  WidgetAsset.hpp  WidgetGameport.hpp  WidgetHierarchy.hpp  WidgetLoadPicker.hpp  WidgetLoadSave.hpp  WidgetLog.hpp  WidgetMenuBar.hpp  WidgetOption.hpp  WidgetPostProcess.hpp  WidgetPrefab.hpp  WidgetProperties.hpp  WidgetSavePicker.hpp  WidgetShader.hpp  WidgetTools.hpp  WidgetViewport.hpp
Editor/src/: EditorInterface.cpp  FileDialog.cpp  Widget.cpp  WidgetAsset.cpp  WidgetGameport.cpp  WidgetHierarchy.cpp  WidgetLoadPicker.cpp  WidgetLoadSave.cpp  WidgetLog.cpp  WidgetMenuBar.cpp  WidgetOption.cpp  WidgetPostProcess.cpp  WidgetPrefab.cpp  WidgetProperties.cpp  WidgetSavePicker.cpp  WidgetShader.cpp  WidgetTools.cpp  WidgetViewport.cpp  main.cpp  type.cpp
Engine/: CMakeLists.txt
Engine/include/: Context.hpp  Core.hpp  Engine.hpp  Scene.hpp  Time.hpp  Triangle.hpp  Window.hpp  World.hpp
Engine/include/Audio/: Buffer.hpp  Sound.hpp  Source.hpp
Engine/include/Debug/: Logger.hpp  LoggerSingleton.hpp
Engine/include/ECS/: Component.hpp  ComponentArray.hpp  ComponentManager.hpp  ComponentModel.hpp  Coordinator.hpp  ECS.hpp  Entity.hpp  EntityManager.hpp  Name.hpp  System.hpp  SystemManager.hpp
Engine/include/ECS/Components/: AnimatorComponent.hpp  AudioSourceComponent.hpp  CameraComponent.hpp  ColliderComponent.hpp  DataComponent.hpp  GravityComponent.hpp  Image2DComponent.hpp  LightComponent.hpp  ListenerComponent.hpp  PlayerComponent.hpp  RenderableComponent.hpp  RigidBodyComponent.hpp  ScriptComponent.hpp  StaticActorComponent.hpp  TransformComponent.hpp
Engine/include/ECS/Systems/: AnimationSystem.hpp  ColliderDrawSystem.hpp  InputSystem.hpp  PhysicsSystem.hpp  PlayerControlSystem.hpp  PostProcessSystem.hpp  RenderSystem.hpp  RenderUISystem.hpp  ScriptSystem.hpp  SoundSystem.hpp
Engine/include/Inputs/: InputEnums.hpp  InputHandler.hpp
Engine/include/Math/: Common.hpp  Math.hpp  Meta.hpp  Quaternion.hpp  Transform.hpp
Engine/include/Math/Matrix/: Matrices.hpp  Matrix4.hpp
Engine/include/Math/Matrix/inl/: Matrix4.inl.hpp
Engine/include/Math/Misc/: Misc.hpp  Noise.hpp  RNG.hpp
Engine/include/Math/Misc/inl/: Noise.inl.hpp  RNG.inl.hpp
Engine/include/Math/Vector/: Vector2.hpp  Vector3.hpp  Vector4.hpp  Vectors.hpp
Engine/include/Math/Vector/inl/: Vector2.inl.hpp  Vector3.inl.hpp  Vector4.inl.hpp
Engine/include/Math/inl/: Common.inl.hpp
Engine/include/Physic/: Collider.hpp  Physic.hpp  PhysicCast.hpp  PhysicScene.hpp  RigidBody.hpp
Engine/include/Rendering/: Animation.hpp  Animator.hpp  Bone.hpp  Camera.hpp  CubeMap.hpp  FrameBuffer.hpp  Light.hpp  Material.hpp  Mesh.hpp  Model.hpp  PostProcess.hpp  Primitives.hpp  Quad.hpp  QuadScreen.hpp  Render.hpp  RenderUI.hpp  Shader.hpp  ShadowMapping.cpp  ShadowMapping.hpp  Texture.hpp  camera.hpp  light.hpp  mesh.hpp  model.hpp  shader.hpp
Engine/include/ResourceManager/: ResourceManager.hpp
Engine/include/Scenegraph/: SceneNode.hpp
Engine/include/Scripting/: common.hpp  modules.hpp
Engine/include/Scripts/: ScriptTest.hpp
Engine/include/Serialization/: LoadComponent.hpp  Serialization.hpp  SerializeComponent.hpp  Utils.hpp
Engine/src/: Engine.cpp  Scene.cpp  Time.cpp  Triangle.cpp  Window.cpp  World.cpp
Engine/src/Audio/: Buffer.cpp  Sound.cpp  Source.cpp
Engine/src/Debug/: Logger.cpp
Engine/src/ECS/: ComponentModel.cpp  Coordinator.cpp  ECS.cpp  Entity.cpp  Name.cpp  PlayerControlSystem.cpp  SystemManager.cpp
Engine/src/ECS/Componants/: ColliderComponent.cpp
Engine/src/ECS/Component/: AnimatorComponent.cpp
Engine/src/ECS/Systems/: AnimationSystem.cpp  ColliderDrawSystem.cpp  PhysicsSystem.cpp  PlayerControlSystem.cpp  PostProcessSystem.cpp  RenderSystem.cpp  RenderUISystem.cpp  ScriptSystem.cpp
Engine/src/Inputs/: InputHandler.cpp
Engine/src/Physic/: Collider.cpp  Physic.cpp  PhysicScene.cpp  RigidBody.cpp
Engine/src/Rendering/: Animation.cpp  Animator.cpp  Bone.cpp  Camera.cpp  CubeMap.cpp  FrameBuffer.cpp  Light.cpp  Material.cpp  Mesh.cpp  Model.cpp  PostProcess.cpp  Primitives.cpp  Quad.cpp  QuadScreen.cpp  Render.cpp  RenderUI.cpp  Shader.cpp  ShadowMapping.cpp  Texture.cpp  Triangle.cpp  camera.cpp  light.cpp  mesh.cpp  model.cpp  shader.cpp
Engine/src/ResourceManager/: ResourceManager.cpp
Engine/src/Scenegraph/: SceneNode.cpp
Engine/src/Scripting/: common.cpp  components.cpp  input.cpp  math.cpp
Engine/src/Scripts/: ScriptTest.cpp
Engine/src/Serialization/: LoadComponent.cpp  Serialization.cpp  SerializeComponent.cpp  Utils.cpp
Engine/src/Shader/: colors.fs  colors.vs  dirlight.fs  lamp.vs  light.vs  multiplelight.fs  vertexshader.vs
Engine/src/Sound/: Buffer.cpp  Sound.cpp  Source.cpp
EngineAssets/Shaders/: animation.vs  basic.vs  colors.fs  colors.vs  cubeMap.fs  multilight.fs  shadowmapping.fs  shadowmapping.vs  wireframe.vs
EngineAssets/Shaders/PostProcess/: basicPP.fs  bloom.fs  bloomFinal.fs  blur.fs  edge.fs  gamma.fs  inversion.fs  kernel.fs
Game/: CMakeLists.txt
Math/: CMakeLists.txt
Math/include/: Math.hpp  Meta.hpp
Math/include/Misc/: Noise.hpp  RNG.hpp
Math/include/Vector/: Vector2.hpp  Vector3.hpp  Vector4.hpp  Vectors.hpp
Math/src/Misc/: Noise.cpp  RNG.cpp
Math/src/Vector/: Vector2.cpp  Vector3.cpp  Vector4.cpp
_sources/: index.rst.txt
docs/: BuildDoc.sh  CMakeLists.txt  Doxyfile
docs/source/: ECSQuickstart.rst  LUAQuickstart.rst  conf.py  index.rst
docs/source/ECS/: Coordinator.rst
lib/: CMakeLists.txt
src/: main.cpp
tests/: CMakeLists.txt  CommonTest.cpp  GlmBwatComparison.cpp  GlmBwatComparison.hpp  NoiseTest.cpp  QuaternionTest.cpp  main.cpp
tests/Matrix/: Matrix4Test.cpp
tests/Vectors/: Vector2Test.cpp  Vector3Test.cpp  Vector4Test.cpp
